--- a/static/css/change_employee_password.css
+++ b/static/css/change_employee_password.css
@@ -54,10 +54,14 @@
 	padding: 2%;
 }
 .text-input {
-	margin: 1% 0;
+	margin: 1% auto;
+	width: 90%;
 }
 label {
+	width: 45%;
 	margin-right: 1%;
+	text-align: left;
+	display: inline-block;
 }
 .outer-password-bar {
 	width: 50%;
