--- a/static/css/change_info.css
+++ b/static/css/change_info.css
@@ -61,10 +61,17 @@
 	padding: 2%;
 }
 .text-form {
-	margin: 1% 0;
+	margin: 1% auto;
+	width: 80%;
 }
 label {
+	width: 36%;
 	margin-right: 1%;
+	text-align: left;
+	display: inline-block;
+}
+.select-form label {
+	width: 10%;
 }
 #submit-info-button {
 	width: 30%;
