--- a/static/css/job_applications.css
+++ b/static/css/job_applications.css
@@ -55,7 +55,17 @@
 	padding: 2%;
 }
 .text-input, .text-form {
-	margin: 1% 0;
+	margin: 1% auto;
+	width: 80%;
+}
+label {
+	width: 36%;
+	margin-right: 1%;
+	text-align: left;
+	display: inline-block;
+}
+.select-form label {
+	width: 10%;
 }
 input, select {
 	background-color: rgb(190, 250, 255);	
