--- a/static/css/update_employee_info.css
+++ b/static/css/update_employee_info.css
@@ -65,10 +65,14 @@
 	padding: 2%;
 }
 .text-form {
-	margin: 1% 0;
+	margin: 1% auto;
+	width: 80%;
 }
 label {
+	width: 36%;
 	margin-right: 1%;
+	text-align: left;
+	display: inline-block;
 }
 #submit-info-button {
 	width: 30%;
